[gd_scene load_steps=15 format=2]

[ext_resource path="res://Gamemodes/Tag/Game.gd" type="Script" id=1]
[ext_resource path="res://Important Scripts/Level_Genorator.tscn" type="PackedScene" id=2]
[ext_resource path="res://Images/cloud.png" type="Texture" id=3]
[ext_resource path="res://GUI/Fonts/MomcakeBold-WyonA.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Random Stuff/VerticalGradient.tres" type="Material" id=5]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 200, 23.569 )

[sub_resource type="Animation" id=8]
length = 0.001

[sub_resource type="Animation" id=9]
resource_name = "Tree"
length = 3.0
loop = true

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0, 0.519126, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.858824, 1, 1, 1, 0 )

[sub_resource type="Gradient" id=12]
offsets = PoolRealArray( 0, 0.519126, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.360784, 1, 1, 1, 0 )

[sub_resource type="Gradient" id=13]
offsets = PoolRealArray( 0, 0.543046, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="DynamicFont" id=16]
size = 60
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "Tag"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Game" type="Node2D" groups=["Game"]]
z_index = -1
script = ExtResource( 1 )

[node name="Lobby" type="StaticBody2D" parent="."]
light_mask = 32
position = Vector2( 512, 360 )
scale = Vector2( 2, 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lobby"]
position = Vector2( 0, 49.275 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Lobby"]
autoplay = "Tree"
anims/RESET = SubResource( 8 )
anims/Tree = SubResource( 9 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="BG" type="ColorRect" parent="ParallaxBackground"]
material = ExtResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.541176, 0.776471, 0.901961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clouds" type="CPUParticles2D" parent="ParallaxBackground"]
position = Vector2( 1027.19, 170.634 )
amount = 3
lifetime = 25.0
preprocess = 50.0
texture = ExtResource( 3 )
emission_shape = 2
emission_rect_extents = Vector2( 0, 100 )
gravity = Vector2( -5, 0 )
scale_amount = 0.5
color_ramp = SubResource( 11 )

[node name="Clouds2" type="CPUParticles2D" parent="ParallaxBackground"]
position = Vector2( 1024, 368.909 )
amount = 3
lifetime = 25.0
preprocess = 50.0
texture = ExtResource( 3 )
emission_shape = 2
emission_rect_extents = Vector2( 0, 100 )
gravity = Vector2( -5, 0 )
scale_amount = 0.25
color_ramp = SubResource( 12 )

[node name="Snow" type="CPUParticles2D" parent="ParallaxBackground"]
visible = false
position = Vector2( 512, 300 )
amount = 200
lifetime = 5.0
preprocess = 10.0
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 612, 400 )
spread = 0.0
gravity = Vector2( -20, 24 )
scale_amount = 5.0
color_ramp = SubResource( 13 )

[node name="Level_Genorator" parent="." instance=ExtResource( 2 )]
gamemode = "Tag"

[node name="Shaders" type="CanvasLayer" parent="."]
layer = 10

[node name="Cooldown" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="KillTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="LeftBorder" type="Node2D" parent="."]

[node name="RightBorder" type="Node2D" parent="."]
position = Vector2( 1024, 0 )

[node name="Tag" type="Node2D" parent="."]

[node name="Label" type="Label" parent="Tag"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.5
margin_top = -30.0
margin_right = 55.5
margin_bottom = 30.0
custom_fonts/font = SubResource( 16 )
text = "Tag!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Tag"]
anims/RESET = SubResource( 14 )
anims/Tag = SubResource( 15 )

[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
[connection signal="timeout" from="KillTimer" to="." method="_on_KillTimer_timeout"]
